#
# Warning flags
#
C_WARNING_FLAGS = \
	-Wall \
	-Wpedantic \
	-Wextra \
	-Wno-unknown-warning \
	-Wno-unknown-warning-option \
	-Wdouble-promotion \
	-Wformat-y2k \
	-Wmissing-include-dirs \
	-Wswitch-default \
	-Wunused-parameter \
	-Wstrict-aliasing \
	-Wstrict-overflow=5 \
	-Wtrampolines \
	-Wfloat-equal \
	-Wshadow \
	-Wpointer-arith \
	-Wbad-function-cast \
	-Wc++-compat \
	-Wcast-qual \
	-Wcast-align \
	-Wwrite-strings \
	-Wconversion \
	-Wno-sign-conversion \
	-Wjump-misses-init \
	-Wlogical-op \
	-Wstrict-prototypes \
	-Wold-style-definition \
	-Wmissing-declarations \
	-Wredundant-decls \
	-Wnested-externs \
	-Wunsuffixed-float-constants \
	-Wunsafe-loop-optimizations


#
# Definitions
#
if ABC_USES_UPOWER

GENERAL_DEFINITIONS = -DABC_HAS_UPOWER=1

else

GENERAL_DEFINITIONS = -DABC_HAS_UPOWER=0

endif # if ABC_USES_UPOWER


GENERAL_DEFINITIONS += \
	-DABC_PICTURE_DIR=\"$(localstatedir)/aubrca\" \
	-DABC_CONFIG_FILENAME=\"$(sysconfdir)/aubrca.conf\" \
	-DABC_CONFIG_DEFAULTS_FILENAME=\"$(datadir)/aubrca/defaults.conf\"


if ABC_USES_DEBUG

GENERAL_DEFINITIONS += \
	-DDEBUG=1 \
	-DABC_LOGGING_ON=1 \
	-DABC_LOGGING_DEFAULT_FILENAME=\"$(localstatedir)/aubrca/debug.log\"

else

GENERAL_DEFINITIONS += -DNDEBUG=1 -DABC_LOGGING_ON=0

endif # if ABC_USES_DEBUG


#
# Global build flags
#
AM_CFLAGS = \
	$(GENERAL_DEFINITIONS) \
	-std=gnu99 $(C_WARNING_FLAGS) \
	-I$(top_srcdir)/source/libs/inc \
	$(LIBCONFIG_CFLAGS)


#
# Libraries (not to be installed)
#
noinst_LTLIBRARIES = libabc_ambient_controller.la \
					 libabc_backlight_controller.la \
					 libabc_brightness_service.la \
					 libabc_filter.la \
					 libabc_io_service.la \
					 libabc_logging_service.la \
					 libabc_power_controller.la \
					 libabc_terminal_controller.la \
					 libabc_time_service.la \
					 libabc_config_service.la \
					 libabc_utils.la

#
# Note: Use LIBADD to link libraries with libraries and LDADD to link
# programs with libraries.
#

include $(srcdir)/sources_libs.mk




#
# Programs
#

#
# CLI
#
bin_PROGRAMS = aubrca

include $(srcdir)/sources_core.mk


#
# GUI
#
if ABC_USE_GUI

AM_CFLAGS += $(GTK4_CFLAGS)

bin_PROGRAMS += aubrcaui

include $(srcdir)/sources_core_ui.mk

endif # if ABC_USE_GUI





#
# Test libraries
#
AM_CXXFLAGS = -std=c++11 -Wall -Wextra

ABC_TEST_FLAGS = \
	-DABC_LOGGING_ON=1 \
	-DABC_LOGGING_DEFAULT_FILENAME=\"log.log\" \
	-DDEBUG=1 \
	-I$(top_srcdir)/source/libs/inc \
	-I$(top_srcdir)/source/libs/inc_test \
	-I$(top_srcdir)/source/libs/tests/test_lib/inc \
	-DABC_CONFIG_FILENAME=\"aubrca.conf\" \
	-DABC_CONFIG_DEFAULTS_FILENAME=\"defaults.conf\" \
	-DABC_PICTURE_DIR=\"\"

#
# CPP testing libraries
#
check_LTLIBRARIES = \
	libabc_test.la \
	libabc_logging_service_active.la

include $(srcdir)/sources_check_libs.mk



#
# Test executables
#
check_PROGRAMS = \
	test_abc_ambient_controller \
	test_abc_backlight_controller \
	test_abc_logging_service \
	test_abc_filter \
	test_abc_io_service \
	test_abc_utils \
	test_abc_config_service_libconfig \
	test_abc_power_controller \
	test_abc_power_controller_upower \
	test_abc_terminal_controller \
	test_abc_brightness_service \
	test_abc_brightness_service_fake_abc_time_service

include $(srcdir)/sources_check_core.mk

TESTS = \
	test_abc_ambient_controller \
	test_abc_backlight_controller \
	test_abc_logging_service \
	test_abc_filter \
	test_abc_io_service \
	test_abc_utils \
	test_abc_config_service_libconfig \
	test_abc_power_controller_upower \
	test_abc_power_controller \
	test_abc_terminal_controller \
	test_abc_brightness_service \
	test_abc_brightness_service_fake_abc_time_service


#
# State files
#

logfilesdir = $(localstatedir)/aubrca
logfiles_DATA = data/logging/debug.log



#
# Config files
#

# The name "defaultconfigfiles" followed by "dir" allows to extend the
# data-path where the files are installed. In this case we want to install them
# under the "aubrca" directory in "$datadir" rather than in the "$datadir"
# directly.
# The DATA primary enumerates the files we are going to install. The path is in
# the source tree, relative to this Makefile.am.

# The default configuration (not to be changed).
defaultconfigfilesdir = $(datadir)/aubrca
defaultconfigfiles_DATA = data/config/aubrca/defaults.conf

# Note: automake is clever enough to search for files in the source tree as well
# as the build tree.

# Note: No changes are made to the source tree. All the targets are written in
# the build tree.

# To create the host configuration, simply replicate the defaults.conf.
# The data/config directory is created in the build tree.
data/config/aubrca.conf: data/config/aubrca/defaults.conf
	$(MKDIR_P) data/config
	cp -p $< $@

# Let "make clean" remove our own data files.
# Note: We shouldn't remove autobrightnesscam.service as it is generated by
# 'configure' and not make.
CLEANFILES = \
	data/config/aubrca.conf


# The host configuration (should be used by the host to configure the program).
sysconf_DATA = data/config/aubrca.conf


#
# Prepare for systemd.
#
systemdunitsdir = $(libdir)/systemd/system
systemdunits_DATA = data/systemd/autobrightnesscam.service


#
# Congregate the data files
#
EXTRA_DIST = \
	data/config/aubrca/defaults.conf \
	data/systemd/autobrightnesscam.service.in \
	data/logging/debug.log



#
# Systemd banner
#

if ABC_PRINTS_SYSTEMD_BANNER

echo_systemd_banner = \
	@echo "" \
	echo ""; \
	echo "============================================================="; \
	echo "                        README"; \
	echo "============================================================="; \
	echo "To enable automatic startup via systemd, run the following:"; \
	echo ""; \
	echo "On systems with SELinux on, enabling a service not in a default"; \
	echo "location makes enforcing unhappy. So we need to do a heavy systemd"; \
	echo "reload."; \
	echo ""; \
	echo ">>> sudo systemctl daemon-reexec"; \
	echo ">>> sudo systemctl enable $(systemdunitsdir)/autobrightnesscam.service"; \
	echo ">>> sudo systemctl start autobrightnesscam.service"; \
	echo ""; \
	echo ""; \
	echo "Before uninstalling run:"; \
	echo ""; \
	echo ">>> sudo systemctl stop autobrightnesscam.service"; \
	echo ">>> sudo systemctl disable autobrightnesscam.service"; \
	echo ""; \
	echo "============================================================="; \
	echo "                        README"; \
	echo "=============================================================";

else

echo_systemd_banner = @echo ""

endif # if ABC_PRINTS_SYSTEMD_BANNER


#
# Cleaning rules.
#
clean-local: clean-local-check

.PHONY: \
	clean-local-check \
	install-data-local \
	uninstall-local \
	create-systemd-service \
	remove-systemd-service

clean-local-check:
	-rm -f ./*abc*.log ./*abc*.test

#
# Post data installation rule (use the 'local' suffix instead of 'hook' for
# pre-install).
#
install-data-hook:
	-$(echo_systemd_banner)

UNINSTALL_SYSTEMD_SERVICE_CMDS = \
	systemctl stop autobrightnesscam.service; \
	systemctl disable autobrightnesscam.service;

#
# Post uninstall rule.
#
uninstall-hook:
	rm -f $(DESTDIR)$(localstatedir)/aubrca/brightness.jpg
	rm -f $(DESTDIR)$(localstatedir)/aubrca/debug.log
	rmdir $(DESTDIR)$(localstatedir)/aubrca
	rmdir $(DESTDIR)$(datadir)/aubrca
